--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,8 +21,14 @@ jobs:
         run: |
           ./gradlew clean test allureReport
         shell: bash
-      - name: Upload test report
-        uses: actions/upload-artifact@v4
+#      - name: Upload test report
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: test-report-by-allure
+#          path: build/reports/allure-report
+      - name: Deploy report page
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          name: test-report-by-allure
-          path: build/reports/allure-report
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+#          publish_dir: ./public
+          publish_dir: build/reports/allure-report
