--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,4 +30,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: build/reports/allure-report
+          publish_dir: ./build/reports/allure-report/allureReport
